# My-FrameWork

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.tmp_github_wiki/: API-Cookbook.md  Architecture.md  Home.md  Operations-Runbook.md  Platform-Overview.md  _Footer.md  _Sidebar.md
ai-assistant/: Dockerfile  requirements.txt
backend/: Dockerfile  requirements.txt
configs/: resolvers.txt
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  INSTALLATION.md  PRODUCTION_CHECKLIST.md  TOOLS.md  USAGE.md
frontend/: Dockerfile  index.html  package.json  vite.config.ts
nginx/: nginx.conf
notification-service/: Dockerfile  (+1 more)
services/api/: Dockerfile  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_initial.py
services/api/app/: main.py
services/api/app/api/: deps.py
services/api/app/api/routers/: __init__.py  auth.py  health.py  scans.py  targets.py  users.py
services/api/app/core/: config.py  rate_limit.py  security.py  startup.py  telemetry.py
services/api/app/db/: session.py
services/api/app/db/models/: __init__.py  _mixins.py  ai.py  audit.py  baseline.py  cloud.py  email_recon.py  finding.py  hunting.py  idor.py  js_secret.py  notification.py  parameter.py  refresh_token.py  scan.py  settings.py  takeover.py  target.py  user.py
services/api/app/schemas/: auth.py  finding.py  hunting.py  scan.py  target.py  user.py
services/api/app/services/: audit.py  auth.py  hunting.py  queue.py  reports.py  scans.py  targets.py  users.py
(+115 files in other folders)
